// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: dark 1`] = `
":host {
  counter-reset: section !important;
  display: block;
}
[role] {
  display: block;
  padding: 0;
  margin: 0;
  color: #fff;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}"
`;

exports[`getComponentCss() should return correct css for theme: light 1`] = `
":host {
  counter-reset: section !important;
  display: block;
}
[role] {
  display: block;
  padding: 0;
  margin: 0;
  color: #000;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}"
`;

exports[`getSlottedCss() should return correct css 1`] = `
"p-text-list a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
p-text-list[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
p-text-list b, p-text-list strong {
  font-weight: 700 !important;
}
p-text-list em, p-text-list i {
  font-style: normal !important;
}
p-text-list a:hover {
  color: #d5001c !important;
}
p-text-list a::-moz-focus-inner {
  border: 0 !important;
}
p-text-list a:focus {
  outline-color: currentColor !important;
}
p-text-list a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;

exports[`getSlottedCss() should return correct css with prefix 1`] = `
"prefixed-p-text-list a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
prefixed-p-text-list[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
prefixed-p-text-list b, prefixed-p-text-list strong {
  font-weight: 700 !important;
}
prefixed-p-text-list em, prefixed-p-text-list i {
  font-style: normal !important;
}
prefixed-p-text-list a:hover {
  color: #d5001c !important;
}
prefixed-p-text-list a::-moz-focus-inner {
  border: 0 !important;
}
prefixed-p-text-list a:focus {
  outline-color: currentColor !important;
}
prefixed-p-text-list a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;
